@@ -1358,19 +1358,12 @@ $glfFile = array(
     array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/language/english_utf-8.php' ),
     array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/plugin.xml' ),
     array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/sql/mysql_install.php' ),
-    array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/admin.html' ),
-    array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/admin.txt' ),
-    array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/blank.html' ),
     array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/custom/index.html' ),
     array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/filelisting.thtml' ),
     array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/filelisting_category.thtml' ),
     array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/filelisting_record.thtml' ),
     array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/filelisting_subcategory.thtml' ),
     array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/notifyemail.thtml' ),
-    array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/index.html' ),
-    array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/index.txt' ),
-    array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/install.thtml' ),
-    array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/install.txt' ),
     array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/templates/sortmenu.thtml' ),
     array( 'test' => 'E', 'preq' => 'R', 'path' => 'private/plugins/filemgmt/upgrade.php' ),
 // plugin: forum
