@@ -1,8 +1,0 @@
-<a href="{admin_url}"><img src="{img}" border="0"></a>
-&nbsp;&nbsp; <b><font size="4"> {install_header} </font></b>
-<p>{installmsg1}</p>
-<p>{installmsg2}</p>
-<form method='POST' action='{cgiurl}'>
-<input type='submit' value='{btnmsg}' name='B1'>
-<input type='hidden' value='{action}' name='action'>
-</form>
